2013-03-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.1 release procedure:
 	Changes since nco-4_3_0: ncbo -G --unn
	cd ~/nco;cvs tag -d nco-4_3_1;cvs tag -d nco-4_3_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.1 release"
	cvs tag -c nco-4_3_1;cvs tag -c nco-4_3_1-1

	* Clarify DAP server errors

	* ncbo: document GPE and --union

	* ncbo: Implement GPE

	* ncbo: Implement --union/--intersection switch

	* Fix ncbo bug: unswap CNV_CCM_CCSM_CF and FIX_REC_CRD arguments to trv_tbl_mch()
	http://nco.sf.net#bug_ncbo_ccm_ccsm_cf

	* NCO 4.3.0 release procedure:
 	Changes since nco-4_2_6: ncbo -g, ncatted NULs, ncap2 rounding
	cd ~/nco;cvs tag -d nco-4_3_0;cvs tag -d nco-4_3_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.0 release"
	cvs tag -c nco-4_3_0;cvs tag -c nco-4_3_0-1

	* Document one-hundred thousand file ncecat example

2013-03-28  Pedro Vicente  <pvicente@uci.edu>

	* Add ncbo test #15,16,17,18; Group addition, subtraction, multiplication, division, with limits

2013-03-27  Charlie Zender  <zender@uci.edu>

	* nco.texi: clarify why -O --no_tmp_fl in.nc in.nc _does not work_

	* Replace ?lround?() with ?lrint?() in internal NCO rounding
	Halfway cases that were rounded away from zero will now round to nearest even integer

	* Add lrint(), lrintf(), llrint(), llrintf() definitions

	* Fix/revert ncatted to not NUL-terminate attributes

2013-03-27  Pedro Vicente  <pvicente@uci.edu>

	* Enable nearbyint(), rint(), round(), trunc() for MSVC

	* Add ncbo test #14; Group addition

2013-03-26  Charlie Zender  <zender@uci.edu>

	* ncks: always copy group and variable metadata (fixes bug introduced in 4.2.6)

	* Re-activate ncap/ncap2 rounding functions: nearbyint(), rint(), round(), trunc()

	* Implement source code for nearbyint(), rint(), round(), trunc()

	* Add configure checks for nearbyint(), rint(), round(), trunc()

2013-03-22  Pedro Vicente  <pvicente@uci.edu>

	* ncbo: nco_var_op_typ() Find operation type on variable, fixed or processed
